@@ -18,6 +18,7 @@ Now
  * Move run status into CurrentState.
  * Shutdown Environment::Eval loop.
  * Set maximum number of steps.
+ * Shutdown Individual::Execute loop.
 
 Version 0.0.0.8 2010-12-05
  * Add support for current state.
